mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/function.stderr
error: use of deprecated function `get_random_number`
  --> tests/failing_no_mass_cfg_attr/function.rs:12:5
   |
12 |     get_random_number();
   |     ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/function.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^

error: unused return value of `get_random_number` that must be used
  --> tests/failing_no_mass_cfg_attr/function.rs:12:5
   |
12 |     get_random_number();
   |     ^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/function.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
